--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"
+    <link href="materialize.min.css" rel="stylesheet"
         type="text/css" />
 </head>
 
@@ -373,7 +373,7 @@
             exportCSVFile(headers, itemsFormatted, fileTitle);
         }
     </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="materialize.min.js"></script>
     <script src="js.js"></script>
 </body>
 
