--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="materialize.min.css" rel="stylesheet" type="text/css" />
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body class="blue">
@@ -407,6 +408,24 @@
     </script>
     <script src="materialize.min.js"></script>
     <script src="js.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+          console.log("El Navegador admite service workers");
+          window.addEventListener('load', function () {
+            //navigator.serviceWorker.register('sw_offlinepage.js')
+            //navigator.serviceWorker.register('sw_offlinesite.js')
+            navigator.serviceWorker.register('sw.js')
+    
+              .then(function (registration) {
+                console.log('Service worker registrado de modo correcto');
+                console.log('Scope: ' + registration.scope)
+              }, function (error) {
+                console.log('El registro del Service worker ha fallado');
+                console.log(error)
+              });
+          });
+        }
+      </script>
 </body>
 
 </html>
