--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Lista</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta 
+     name='viewport' 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'/>
     <link href="materialize.min.css" rel="stylesheet" type="text/css" />
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#2196f3">
