--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             items: []
         };
 
-        var obj2
+        var obj2;
 
         var appi =
             "https://script.google.com/macros/s/AKfycby1CPhELrfHH6j9okZMxOtT6Q_EJPfNNL2fFpDd0A/exec";
