--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="blue">
 
     <div class="container">
-<!--
+
         <div class="row">
 
             <form id="form" class="col s12 card ">
@@ -160,7 +160,7 @@
                 id="descargar" />
         </center>
     </div>
--->
+
     <script type="text/javascript">
         var envioUrl,
             ApellidoPaterno,
@@ -321,6 +321,7 @@
             }
 
             function limpiar() {
+                alert("Haz sido registrado en la lista");
                 document.getElementById("form").reset();
             }
         }
