--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
             }
 
             function limpiar() {
-                alert("Haz sido registrado en la lista");
+                alert("Haz sido registrado en la lista, tu ID es: "+ID);
                 document.getElementById("form").reset();
             }
         }
