--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <style>
         html {
 
-            background: linear-gradient(145deg, #1e87db, #23a1ff);
-            background-size: cover;
-            background-repeat: no-repeat;
+            background: #2196f3;
         }
 
         body {
