--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link rel="icon" type="image/png" href="icon.png">
     <style>
         html {
-            background: linear-gradient(145deg, #121212, #0f0f0f);
+            /*  background: linear-gradient(315deg, #121212, #151515); */
+            background: linear-gradient(315deg, #0073ad, #0089cd);
+           background-position: center;
+            background-size: 1000vw;
             /* background: #111111; */
         }
 
@@ -22,25 +25,26 @@
 
         .neumor {
             border-radius: 33px;
-            background: linear-gradient(315deg, #0f0f0f, #121212);
-            box-shadow: -12px -12px 23px #080808,
-                12px 12px 23px #1a1a1a;
+            background: linear-gradient(315deg, #0089cd, #0073ad);
+            box-shadow: -22px -22px 45px #005b88,
+                22px 22px 45px #00a5f8;
         }
 
 
         .boton {
             border-radius: 33px;
-            background: linear-gradient(315deg, #0f0f0f, #121212);
-            box-shadow: -12px -12px 23px #080808,
-                12px 12px 23px #1a1a1a;
-
+            background: linear-gradient(315deg, #0089cd, #0073ad);
+            box-shadow: -12px -12px 24px #005b88,
+                12px 12px 24px #00a5f8;
+            color: #ffffff;
+            font-weight: bolder;
+            font-size: 1.2em;
         }
 
         .boton:hover {
-            background: linear-gradient(145deg, #121212, #0f0f0f);
-            box-shadow: inset -8px -8px 16px #080808,
-                inset 8px 8px 16px #1a1a1a;
-
+            background: #0080c0;
+            box-shadow: inset -12px -12px 24px #005b88,
+                inset 12px 12px 24px #00a5f8;
         }
 
         .input-field.col label {
@@ -69,7 +73,7 @@
         }
 
         #ID {
-            color: rgb(2, 121, 22);
+            color: #920202;
             font-size: 2.5em;
         }
     </style>
@@ -82,7 +86,7 @@
 
         <div class="row">
 
-            <form id="form" class="col s12 card neumor white-text">
+            <form id="form" class="col s10 offset-s1 card neumor white-text">
                 <div class="card-content white-text">
                     <center>
                         <h5 style="text-transform: uppercase;">Registro en la lista</h5>
