--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                     <center>
                         <h5 style="text-transform: uppercase;">Registro en la lista</h5>
                     </center>
-                    <div class="row">
+                        <h2>Se terminó el registro</h2>
+                   <!-- <div class="row">
                         <div class="input-field col s12 m4">
                             <input id="ApellidoPaterno" name="ApellidoPaterno" type="text" required>
                             <label for="ApellidoPaterno">Apellido Paterno</label>
@@ -218,7 +219,7 @@
                         id="crear" />
                     <div id="contenido"></div>
                 </center>
-                <br>
+                <br> -->
             </form>
         </div>
         <!--  <center>
